--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,21 @@
                 <artifactId>flexmojos-maven-plugin</artifactId>
                 <version>${flexmojos.version}</version>
                 <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>generate-model-classes</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <includeJavaClasses>
+                                <class>org.dukecon.server.api.model.*</class>
+                            </includeJavaClasses>
+                        </configuration>
+                    </execution>
+                </executions>
+
                 <configuration>
                     <storepass>pass</storepass>
                 </configuration>
@@ -52,6 +67,15 @@
             <type>swc</type>
             <scope>test</scope>
         </dependency>
+
+        <!-- Needed for code generation -->
+        <dependency>
+            <groupId>org.dukecon</groupId>
+            <artifactId>dukecon-server-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
