Initial dummy implementation listing all the titles of all talks provided by the server.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,7 +33,7 @@
                         </goals>
                         <configuration>
                             <includeJavaClasses>
-                                <class>org.dukecon.server.api.model.*</class>
+                                <class>org.dukecon.model.*</class>
                             </includeJavaClasses>
                         </configuration>
                     </execution>
