--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <!-- Flex related properties -->
         <flex.version>4.14.1</flex.version>
         <flashplayer.version>14.0</flashplayer.version>
+        <air.version>14.0</air.version>
         <flexmojos.version>7.1.0-SNAPSHOT</flexmojos.version>
         <apparat.version>1.0-RC9</apparat.version>
 	</properties>
@@ -29,9 +30,9 @@
         <maven>${maven.version}</maven>
     </prerequisites>
 
-	<modules>
-		<module>core</module>
-	</modules>
+    <modules>
+        <module>core</module>
+    </modules>
 
     <build>
         <pluginManagement>
@@ -178,14 +179,5 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-
-    <profiles>
-        <profile>
-            <id>debug</id>
-            <properties>
-                <debug>true</debug>
-            </properties>
-        </profile>
-    </profiles>
 
 </project>
