--- a/core/pom.xml
+++ b/core/pom.xml
@@ -91,10 +91,10 @@
 
         <!-- Air runtime dependencies -->
         <dependency>
-            <groupId>com.adobe.air.framework</groupId>
-            <artifactId>airglobal</artifactId>
+            <groupId>com.adobe.air</groupId>
+            <artifactId>framework</artifactId>
             <version>${air.version}</version>
-            <type>swc</type>
+            <type>pom</type>
         </dependency>
 
         <dependency>
