--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
         -->
         <repository>
             <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots/</url>
+            <url>http://repository.apache.org/content/groups/snapshots/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -143,6 +143,19 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
             <releases>
                 <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <!--
+            This is where third party dependencies for flexmojos come from.
+        -->
+        <repository>
+            <id>sonatype-flexmojos-cache</id>
+            <url>https://repository.sonatype.org/content/groups/flexgroup/</url>
+            <releases>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
                 <enabled>true</enabled>
@@ -172,6 +185,19 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
             <releases>
                 <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <!--
+            This is where third party dependencies for flexmojos come from.
+        -->
+        <pluginRepository>
+            <id>sonatype-flexmojos-cache</id>
+            <url>https://repository.sonatype.org/content/groups/flexgroup/</url>
+            <releases>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
                 <enabled>true</enabled>
