--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
         <air.version>17.0</air.version>
         <flexmojos.version>7.1.0-SNAPSHOT</flexmojos.version>
         <apparat.version>1.0-RC9</apparat.version>
+        <!-- Set this to localhost if you would like to test upload server -->
+        <nexus.repository.host>dev.dukecon.org</nexus.repository.host>
+        <nexus.repository.port>:8081</nexus.repository.port>
+        <nexus.repository.base></nexus.repository.base>
 	</properties>
 
     <prerequisites>
