--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,11 +40,6 @@
                             </templates>
                         </configuration>
                     </execution>
-                    <execution>
-                        <goals>
-                            <goal>sign-air</goal>
-                        </goals>
-                    </execution>
                 </executions>
 
                 <configuration>
@@ -58,6 +53,65 @@
                         <groupId>com.adobe.air.compiler</groupId>
                         <artifactId>adt</artifactId>
                         <version>${air.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <!--
+                Optimize the generated SWF.
+            -->
+            <plugin>
+                <groupId>com.googlecode.apparat</groupId>
+                <artifactId>apparat-maven-plugin</artifactId>
+                <version>${apparat.version}</version>
+
+                <!--executions>
+                    <execution>
+                        <id>reducer</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>reducer</goal>
+                            <goal>tdsi</goal>
+                        </goals>
+                    </execution>
+                </executions-->
+
+                <configuration>
+                    <mergeABC>true</mergeABC>
+                    <!-- Setting this to true lets apparat hang forever -->
+                    <sortCPool>false</sortCPool>
+                    <!-- LZMA does not work yet -->
+                    <lzma>false</lzma>
+                    <matryoshkaType>preloader</matryoshkaType>
+                    <!-- Setting this to true lets apparat hang forever -->
+                    <mergeCF>false</mergeCF>
+                </configuration>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>com.googlecode.apparat</groupId>
+                        <artifactId>apparat-log</artifactId>
+                        <version>${apparat.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.googlecode.apparat</groupId>
+                        <artifactId>apparat-core</artifactId>
+                        <version>${apparat.version}</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>com.adobe.flex.framework</groupId>
+                                <artifactId>playerglobal</artifactId>
+                            </exclusion>
+                            <exclusion>
+                                <groupId>com.adobe.flex.framework</groupId>
+                                <artifactId>flex</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.flex</groupId>
+                        <artifactId>compiler</artifactId>
+                        <version>${flex.version}</version>
+                        <type>pom</type>
                     </dependency>
                 </dependencies>
             </plugin>
