- Streamlined the design of the other parts - Added some fake images to locations and speakers

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -46,6 +46,7 @@
                     <storepass>flexmojos</storepass>
                     <descriptorTemplate>${basedir}/src/main/resources/descriptor.xml</descriptorTemplate>
                     <debug>true</debug>
+                    <sourceFile>DukeConApplication.mxml</sourceFile>
                 </configuration>
 
                 <dependencies>
