--- a/core/pom.xml
+++ b/core/pom.xml
@@ -279,14 +279,14 @@
 
         <!-- Library for AIR OAuth2 support -->
         <!-- Not available in any public repo -->
-        <dependency>
+        <!--dependency>
             <groupId>com.adobe.protocols.oauth</groupId>
             <artifactId>actionscript-oauth2</artifactId>
             <version>1.0.0</version>
             <type>swc</type>
             <scope>system</scope>
             <systemPath>${basedir}/libs/actionscript-oauth2-1.0.0.swc</systemPath>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.apache.flex.flexunit</groupId>
