- Added maven config to produce Android packages on Windows or Mac machines.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -305,4 +305,128 @@
         </dependency>
     </dependencies>
 
+    <!-- Android packaging is currently only enabled on windows or mac machines -->
+    <profiles>
+        <profile>
+            <id>windows-build</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.flexmojos.oss</groupId>
+                        <artifactId>flexmojos-maven-plugin</artifactId>
+                        <version>${flexmojos.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <!--
+                                Packaging for Android
+                            -->
+                            <execution>
+                                <id>package-android</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>android</targetPlatform>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>package-android-captive</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>android</targetPlatform>
+                                    <includeCaptiveRuntime>true</includeCaptiveRuntime>
+                                    <classifier>captive</classifier>
+                                </configuration>
+                            </execution>
+                            <!--
+                                Packaging for ios
+                            -->
+                            <!--execution>
+                                <id>package-ios</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>ios</targetPlatform>
+                                    <iosPackagingType>ipa-debug</iosPackagingType>
+                                    <storefile>${ios-certificate}</storefile>
+                                    <storepass>${ios-password}</storepass>
+                                    <iosProvisioningProfile>${ios-provisioning-profile}</iosProvisioningProfile>
+                                    <-iosPlatformSdk>/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS8.4.sdk</iosPlatformSdk->
+                                </configuration>
+                            </execution-->
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>mac-build</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.flexmojos.oss</groupId>
+                        <artifactId>flexmojos-maven-plugin</artifactId>
+                        <version>${flexmojos.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <!--
+                                Packaging for Android
+                            -->
+                            <execution>
+                                <id>package-android</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>android</targetPlatform>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>package-android-captive</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>android</targetPlatform>
+                                    <includeCaptiveRuntime>true</includeCaptiveRuntime>
+                                    <classifier>captive</classifier>
+                                </configuration>
+                            </execution>
+                            <!--
+                                Packaging for ios
+                            -->
+                            <!--execution>
+                                <id>package-ios</id>
+                                <goals>
+                                    <goal>package-air</goal>
+                                </goals>
+                                <configuration>
+                                    <targetPlatform>ios</targetPlatform>
+                                    <iosPackagingType>ipa-debug</iosPackagingType>
+                                    <storefile>${ios-certificate}</storefile>
+                                    <storepass>${ios-password}</storepass>
+                                    <iosProvisioningProfile>${ios-provisioning-profile}</iosProvisioningProfile>
+                                    <-iosPlatformSdk>/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS8.4.sdk</iosPlatformSdk->
+                                </configuration>
+                            </execution-->
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
