- Cleaned up the structure of the KeycloakRestService - Implemented a MobileKeycloakRestService which provides the login screen using Navigator and Views

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,6 +21,7 @@
 
     <build>
         <sourceDirectory>src/main/flex</sourceDirectory>
+        <testSourceDirectory>src/test/flex</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>net.flexmojos.oss</groupId>
