--- a/core/pom.xml
+++ b/core/pom.xml
@@ -308,6 +308,14 @@
             <type>swc</type>
         </dependency>
 
+        <!-- Component lib containing the schedule view -->
+        <dependency>
+            <groupId>com.flexicious</groupId>
+            <artifactId>dashboard</artifactId>
+            <version>3.2</version>
+            <type>swc</type>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.flex.flexunit</groupId>
             <artifactId>flexunit-flex</artifactId>
@@ -337,127 +345,6 @@
             </properties>
         </profile>
 
-        <!-- Android packaging is currently only enabled on windows or mac machines -->
-        <profile>
-            <id>windows-build</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.flexmojos.oss</groupId>
-                        <artifactId>flexmojos-maven-plugin</artifactId>
-                        <version>${flexmojos.version}</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <!--
-                                Packaging for Android
-                            -->
-                            <execution>
-                                <id>package-android</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>android</targetPlatform>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>package-android-captive</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>android</targetPlatform>
-                                    <includeCaptiveRuntime>true</includeCaptiveRuntime>
-                                    <classifier>captive</classifier>
-                                </configuration>
-                            </execution>
-                            <!--
-                                Packaging for ios
-                            -->
-                            <!--execution>
-                                <id>package-ios</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>ios</targetPlatform>
-                                    <iosPackagingType>ipa-debug</iosPackagingType>
-                                    <storefile>${ios-certificate}</storefile>
-                                    <storepass>${ios-password}</storepass>
-                                    <iosProvisioningProfile>${ios-provisioning-profile}</iosProvisioningProfile>
-                                    <-iosPlatformSdk>/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS8.4.sdk</iosPlatformSdk->
-                                </configuration>
-                            </execution-->
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>mac-build</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.flexmojos.oss</groupId>
-                        <artifactId>flexmojos-maven-plugin</artifactId>
-                        <version>${flexmojos.version}</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <!--
-                                Packaging for Android
-                            -->
-                            <execution>
-                                <id>package-android</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>android</targetPlatform>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>package-android-captive</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>android</targetPlatform>
-                                    <includeCaptiveRuntime>true</includeCaptiveRuntime>
-                                    <classifier>captive</classifier>
-                                </configuration>
-                            </execution>
-                            <!--
-                                Packaging for ios
-                            -->
-                            <!--execution>
-                                <id>package-ios</id>
-                                <goals>
-                                    <goal>package-air</goal>
-                                </goals>
-                                <configuration>
-                                    <targetPlatform>ios</targetPlatform>
-                                    <iosPackagingType>ipa-debug</iosPackagingType>
-                                    <storefile>${ios-certificate}</storefile>
-                                    <storepass>${ios-password}</storepass>
-                                    <iosProvisioningProfile>${ios-provisioning-profile}</iosProvisioningProfile>
-                                    <-iosPlatformSdk>/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS8.4.sdk</iosPlatformSdk->
-                                </configuration>
-                            </execution-->
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
 </project>
