- Cleaned up the item renderers - Switched from reflection-based weaving to explicit FastInject-weaving - Fixed a bug in the code to refresh the tracks

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
                         <rslUrls>
                             <url>rsl/{artifactId}-{version}.{extension}</url>
                         </rslUrls>
+                        <advancedTelemetry>true</advancedTelemetry>
                     </configuration>
                     <dependencies>
                         <dependency>
