- Adjusted the Keycloak support to latest changes in the server -- http instead of https url -- Custom login page - Started Integrating the preferences as "server connection"

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,7 @@
     <name>DukeCon Client: Flex (Core-Application)</name>
 
     <properties>
-        <base-url>http://dev.dukecon.org/latest</base-url>
+        <base-url>https://dev.dukecon.org/latest</base-url>
     </properties>
 
     <build>
