Removed the keycloak module from the build (for now)

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <modules>
     <module>core</module>
-    <module>keycloak</module>
+    <!--module>keycloak</module-->
 
     <module>flexorm</module>
     <module>flexorm-generator</module>
