--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,10 +16,12 @@
     <name>DukeCon Client: Flex (Core-Application)</name>
 
     <properties>
-        <base-url>http://localhost:8080/develop</base-url>
+        <!-- Local server -->
+        <!--base-url>http://localhost:8080/develop</base-url-->
+        <!-- Production server -->
         <!--base-url>https://dukecon.org/javaland</base-url-->
-
-        <!--base-url>https://dev.dukecon.org/latest</base-url-->
+        <!-- Remote CI deployed development server -->
+        <base-url>https://dev.dukecon.org/latest</base-url>
         <feature.server-favorites>false</feature.server-favorites>
         <feature.event-rating>false</feature.event-rating>
     </properties>
