- Replaced the FlexORM SQL persistence with StoredObject persistence. - Replaced the optimized model with a simpler one, which also simplifies the build. - Updated the application to the changed model and persistence.

--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     <module>core</module>
     <!--module>keycloak</module-->
 
-    <module>flexorm</module>
-    <module>flexorm-generator</module>
+    <!--module>flexorm</module>
+    <module>flexorm-generator</module-->
 
     <!--module>oauth2</module-->
   </modules>
