--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,11 +17,11 @@
 
     <properties>
         <!-- Local server -->
-        <!--base-url>http://localhost:8080/develop</base-url-->
+        <base-url>http://localhost:8080/develop</base-url>
         <!-- Production server -->
         <!--base-url>https://dukecon.org/javaland</base-url-->
         <!-- Remote CI deployed development server -->
-        <base-url>https://dev.dukecon.org/latest</base-url>
+        <!--base-url>https://dev.dukecon.org/latest</base-url-->
         <feature.server-favorites>false</feature.server-favorites>
         <feature.event-rating>false</feature.event-rating>
     </properties>
@@ -50,15 +50,9 @@
                                 <class>org.dukecon.model.annotations.*</class>
                             </excludeJavaClasses>
                             <templates>
-                                <base-bean-template>${basedir}/src/main/templates/beanFlexORM.gsp</base-bean-template>
+                                <bean-template>${basedir}/src/main/templates/bean.gsp</bean-template>
+                                <base-bean-template>${basedir}/src/main/templates/beanBase.gsp</base-bean-template>
                             </templates>
-                            <!--
-                                We want to generate different class names, so we need
-                                to provide a custom transformer to the generator.
-                            -->
-                            <extraOptions>
-                                <transformer>org.dukecon.utils.generator.FlexORMTransformer</transformer>
-                            </extraOptions>
                         </configuration>
                     </execution>
                     <execution>
@@ -220,11 +214,6 @@
                         <version>${air.version}</version>
                         <type>pom</type>
                     </dependency>
-                    <dependency>
-                        <groupId>org.dukecon</groupId>
-                        <artifactId>dukecon-flex-flexorm-generator</artifactId>
-                        <version>1.1.0-SNAPSHOT</version>
-                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
@@ -279,14 +268,6 @@
             <type>swc</type>
         </dependency>
 
-        <!-- Library for ORMapping -->
-        <dependency>
-            <groupId>org.dukecon</groupId>
-            <artifactId>dukecon-flex-flexorm</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
-            <type>swc</type>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.flex.flexunit</groupId>
             <artifactId>flexunit-flex</artifactId>
@@ -302,13 +283,6 @@
             <version>1.3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.dukecon</groupId>
-            <artifactId>dukecon-flex-flexorm-generator</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
     </dependencies>
 
     <profiles>
